--- a/src/AdvertBundle/Resources/views/Default/index.html.twig
+++ b/src/AdvertBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,20 @@
-Hello {{ name }}!
+{% extends '@Common/base.html.twig' %}
+
+{% block body %}
+
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+        </tr>
+    </thead>
+    {% for advert in adverts %}
+        <tr>
+            <td>{{ advert.name }}</td>
+            <td>{{ advert.price }}</td>
+        </tr>
+    {% endfor %}
+</table>
+
+{% endblock %}
