--- a/src/AdvertBundle/Resources/views/Default/index.html.twig
+++ b/src/AdvertBundle/Resources/views/Default/index.html.twig
@@ -7,13 +7,15 @@
     <thead>
         <tr>
             <th>Name</th>
+            <th>Year</th>
             <th>Price</th>
         </tr>
     </thead>
     {% for advert in adverts %}
         <tr>
-            <td><a href="{{ path('advert_detail_page', {'id': advert.id }) }}">{{ advert.name }}</a></td>
-            <td>{{ advert.price }}</td>
+            <td><a href="{{ path('advert_detail_page', {'id': advert.id }) }}">{{ advert.make }} {{ advert.model }}</a></td>
+            <td>{{ advert.year }}</td>
+            <td>{{ advert.price }}$</td>
         </tr>
     {% endfor %}
 </table>
