edited add adver form

--- a/src/AdvertBundle/Resources/views/Advert/add.html.twig
+++ b/src/AdvertBundle/Resources/views/Advert/add.html.twig
@@ -10,3 +10,13 @@
     </form>
 
 {% endblock %}
+
+{% block javascripts %}
+    {#<script>#}
+        {#$(document).ready(function(){#}
+            {#$.post( "/advert/make/models", function( data ) {#}
+                {#console.log(data)#}
+            {#}, 'json');#}
+        {#});#}
+    {#</script>#}
+{% endblock %}
