--- a/src/AdvertBundle/Resources/views/Default/detail.html.twig
+++ b/src/AdvertBundle/Resources/views/Default/detail.html.twig
@@ -8,7 +8,7 @@
     <table>
         <tr>
             <th>Traktor:</th>
-            <td>{{ advert.make }} {{ advert.model }}</td>
+            <td>{{ advert.make.name }} {{ advert.model.name }}</td>
         </tr>
         <tr>
             <th>Year:</th>
