--- a/src/CommonBundle/Resources/views/base.html.twig
+++ b/src/CommonBundle/Resources/views/base.html.twig
@@ -35,6 +35,7 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
