fix edit adver form

--- a/src/AdvertBundle/Resources/views/Advert/edit.html.twig
+++ b/src/AdvertBundle/Resources/views/Advert/edit.html.twig
@@ -10,3 +10,7 @@
     </form>
 
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('bundles/advert/javascripts/editAdvert.js') }}"></script>
+{% endblock %}
