--- a/src/AdvertBundle/Resources/views/Detail/index.html.twig
+++ b/src/AdvertBundle/Resources/views/Detail/index.html.twig
@@ -2,8 +2,7 @@
 
 {% block body %}
     <div>
-        <a href="{{ path('advert_homepage') }}">Back</a>
-        | <a href="{{ path('advert_edit_page', {'id': advert.id}) }}">Edit</a>
+        <a href="{{ path('advert_edit_page', {'id': advert.id}) }}">Edit</a>
     </div>
     <table>
         <tr>
