--- a/src/CatalogBundle/Resources/views/select.html.twig
+++ b/src/CatalogBundle/Resources/views/select.html.twig
@@ -1,3 +1,3 @@
 {% for item in array %}
-    <option value="{{ item.id }}">{{ item.name }}</option>
+    <option class="option" value="{{ item.id }}">{{ item.name }}</option>
 {% endfor %}
