--- a/src/SearchBundle/Resources/views/Search/index.html.twig
+++ b/src/SearchBundle/Resources/views/Search/index.html.twig
@@ -7,7 +7,7 @@
         {{ form_errors(form) }}
         {{ form_widget(form) }}
         <div>
-            <button type="submit" id="app_bundle_advert_save">Save</button>
+            <button type="submit" id="app_bundle_advert_save">Search</button>
         </div>
     </form>
 
