--- a/src/AdvertBundle/Resources/views/Detail/index.html.twig
+++ b/src/AdvertBundle/Resources/views/Detail/index.html.twig
@@ -1,5 +1,7 @@
 {% extends '@Common/base.html.twig' %}
 
+{% block title %}Detail{% endblock %}
+
 {% block body %}
     <div>
         <a href="{{ path('advert_edit_page', {'id': advert.id}) }}">Edit</a>
